# diffsoup

./: Cargo.toml  LICENSE  README.md  default.nix  flake.nix
src/: diff.rs  error.rs  lib.rs  main.rs  repo.rs  trees.rs  tui.rs
src/pr/: bitbucket.rs  github.rs  github_query.graphql  mod.rs  none.rs
src/tui/: app.rs  mod.rs  state.rs  worker.rs
