[package]
name = "diffsoup"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.28.1"
error-stack = "0.6.0"
futures = "0.3.31"
gix = { version = "0.75.0", features = ["blocking-network-client"] }
jj-cli = "0.36.0"
jj-lib = "0.36.0"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
url = "2.5.7"

[dependencies.reqwest]
version = "0.12.25"
default-features = false
features = ["blocking", "rustls-tls", "json"]

[dependencies.arboard]
version = "3.6.1"
default-features = false
features = ["wayland-data-control", "windows-sys"]

[lib]
name = "diffsoup"
path = "src/lib.rs"

[[bin]]
name = "diffsoup"
path = "src/main.rs"
